# OtoDecks

./: .gitignore  CMakeLists.txt  CustomLookAndFeel.cpp  CustomLookAndFeel.h  DJAudioPlayer.cpp  DJAudioPlayer.h  DeckButton.cpp  DeckButton.h  DeckGUI.cpp  DeckGUI.h  DeckLoader.cpp  DeckLoader.h  Jogwheel.cpp  Jogwheel.h  JogwheelLookAndFeel.cpp  JogwheelLookAndFeel.h  LibraryAudioItem.cpp  LibraryAudioItem.h  LibraryComponent.cpp  LibraryComponent.h  MainComponent.cpp  MainComponent.h  PlaylistComponent.cpp  PlaylistComponent.h  README.md  SearchComponent.cpp  SearchComponent.h  TrackInfoDisplay.cpp  TrackInfoDisplay.h  TwoChannelMixer.cpp  TwoChannelMixer.h  WaveformDisplay.cpp  WaveformDisplay.h  XmlParser.cpp  XmlParser.h
include/: DJAudioPlayer.h  DeckLoader.h  LibraryComponent.h  TrackInfoDisplay.h
src/: DJAudioPlayer.cpp  DeckButton.cpp  Jogwheel.cpp  JogwheelLookAndFeel.cpp  LibraryAudioItem.cpp  Main.cpp  TrackInfoDisplay.cpp  TwoChannelMixer.cpp  XmlParser.cpp
